fixed ghost mount issues

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,14 +1,7 @@
 web:
-  image: ghost:0.7
+  image: mazelab/ghost:0.7.1
   environment:
     - VIRTUAL_HOST=ghost.dev
+    - GHOST_URL=http://ghost.dev:4480
   volumes:
     - /projects/ghost/:/var/lib/ghost
-    - /vagrant/configs/eintopf-ghost/:/eintopf_ghost
-  command: sh -c '
-    if [ ! -f /var/lib/ghost/config.js ]; then
-      mkdir -p /var/lib/ghost/;
-      cp /eintopf_ghost/config.js /var/lib/ghost/config.js;
-    fi;
-    /entrypoint.sh npm start;
-    '
